--- a/style.css
+++ b/style.css
@@ -131,3 +131,25 @@ h1 {
     z-index: 1;
 } */
 
+
+
+/* Bonus */
+
+
+#reality {
+    z-index: 30;
+}
+
+#time {
+    z-index: 25;
+}
+
+#soul {
+    z-index: 20;
+}
+
+
+h2 {
+    position: sticky;
+    top: 65px;
+}
